// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the "active" border color on hover 1`] = `
<button
  className="customizable-link active"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": "#000000",
      "color": "#FFFFFF",
    }
  }
  type="button"
/>
`;

exports[`changes the border color on hover 1`] = `
<button
  className="customizable-link"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": "#000000",
      "color": "#FFFFFF",
    }
  }
  type="button"
/>
`;

exports[`does not have a border with "noHover" option 1`] = `
<button
  className="customizable-link noHover"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": undefined,
      "color": "#FFFFFF",
    }
  }
  type="button"
/>
`;

exports[`has the "active" border 1`] = `
<button
  className="customizable-link active"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": "#FFFFFF",
      "color": "#FFFFFF",
    }
  }
  type="button"
/>
`;

exports[`has the colors set properly 1`] = `
<button
  className="customizable-link"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": undefined,
      "color": "#FFFFFF",
    }
  }
  type="button"
/>
`;

exports[`renders without crashing 1`] = `
<button
  className="customizable-link"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "borderBottomColor": undefined,
      "color": undefined,
    }
  }
  type="button"
/>
`;
